# SLAM_Algorithms

./: README.md  question.md
1_imuIntegration/: imuIntegration.cpp  imu_intergration  question.txt
2_KalmanFilter/: kalmanFliter  kalmanFliter.cpp
3_BundleAdjustment/: bundleAdjustment.cpp
3_BundleAdjustment/useCeres/: BA_optimized_parameters.txt  CMakeLists.txt  helloWorld.cpp  official.cpp  overloadOperator.cpp  robustCurveFitting.cpp  simple_bundle_adjuster.cc
3_BundleAdjustment/useCeres/curveFit/: curveFitting.cpp  curve_fitting.cpp  curve_fitting_robust.cpp
3_BundleAdjustment/useCeres/helloWorld/: helloWorld.cpp  helloWorld_Analytic.cpp
3_BundleAdjustment/useCeres/powellFunction/: solvePowell.cpp
4_IterativeClosestPoint/useCeres/: CMakeLists.txt
4_IterativeClosestPoint/useCeres/include/: iterativeClosestPoint.h
4_IterativeClosestPoint/useCeres/src/: iterativeClosestPoint.cc  main.cc
5_ransac/: ransacFittingline.cpp
6_utils/: CMakeLists.txt  test.cpp
6_utils/data/: poses.txt
6_utils/include/: pose.h  utility.h
6_utils/src/: pose.cpp  utility.cpp
7_gaussionNewtown/: gaussionNewtownFitCurve.cpp
colorful/: .clangd  CMakeLists.txt  ReadPose.md  data_post.py  data_post_anno.py  data_post_old.py  doublefloat  doulefloat.cpp  gen_depth_pcd.py  hdmapping_main.py
colorful/include/: distribute_project.h  image_process.h  pose.h  projector.h
colorful/src/: distribute_project.cu  image_process.cu  main.cc  pose.cc  projector.cc
